Change baseURl in config

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-BaseUrl= "http://friedenslager-petersdorf.eu/"
+BaseUrl= "http://www.friedenslager-petersdorf.eu/"
 LanguageCode= "de-DE"
 Title= "Friedenslager Petersdorf e.V."
 paginate = 5
