--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-BaseUrl= "http://www.friedenslager-petersdorf.eu/"
+BaseUrl= "https://www.friedenslager-petersdorf.eu/"
 LanguageCode= "de-DE"
 Title= "Friedenslager Petersdorf e.V."
 paginate = 5
@@ -13,7 +13,7 @@ theme = "casper"
   author = "Friedenslager Petersdorf"
   logo = "images/logo-top-left.png"
   # Optional RSS-Link, if not provided it defaults to the standard index.xml
-  RSSLink = "http://feeds.feedburner.com/..." 
+  # RSSLink = "http://feeds.feedburner.com/..." 
   # facebookName = ""
   # linkedinName = ""
   # set true if you are not proud of using Hugo (true will hide the footer note "Proudly published with HUGO.....")
